# MyPrompt

./: .coverage  .example.env  .gitignore  .voidrules  README.md  api.py  app.py  app_factory.py  provider_anthropic.py  provider_generic.py  provider_registry.py  pyproject.toml  requirements.txt  test_api.py  test_gemini_api.py
.development_docs/: Directory Tree - MyPrompt.txt  MyPrompt - Updates.txt  MyPrompt New Prompt.md  MyPrompt.txt  Prompt - Test Addition and Coverage - MyPrompt.txt
.early.coverage/python/: coverage.json
frontend-vite/: README.md  package-lock.json  package.json
frontend-vite/src/: App.css  App.jsx  App.test.jsx  PEAChat.jsx
frontend-vite/src/App.early.test/: App.early.test.jsx
providers/: __init__.py  provider_anthropic.py  provider_base.py  provider_generic.py  provider_google.py  provider_groq.py  provider_lmstudio.py  provider_mistral.py  provider_ollama.py  provider_openai.py  provider_openr.py  provider_registry.py
test_api/: test_optimize_prompt.py
test_app/: test_index.py  test_index_1.py
test_early_api/: test_early_optimize_prompt.py
tests/: conftest.py
tests/test_api/: test_api.py  test_gemini_api.py  test_optimize_prompt.py  test_pea_errors.py  test_providers.py
tests/test_app/: test_index.py
